fix dark mode flickering of SSR fixes #736

--- a/src/client/stylesheets/main.scss
+++ b/src/client/stylesheets/main.scss
@@ -18,3 +18,57 @@
     transform: translatey(0px);
   }
 }
+
+:root {
+  --primary: #fbb03b;
+  --secondary: #5c629e;
+
+  --black: #000000;
+  --black95: #050505;
+  --black80: #999999;
+  --black60: #cccccc;
+  --black40: #e5e5e5;
+  --black20: #f0f0f0;
+  --black10: #f7f7f7;
+
+  --text01: #333333;
+  --textReverse: #fff;
+
+  --white: #fff;
+
+  --error: #e71d32;
+  --success: #5aa700;
+  --warning: #efc100;
+  --information: #5aaafa;
+
+  --nav01: #2e3235;
+  --nav02: #575a5d;
+  --nav03: #323232;
+}
+
+html[data-theme="dark"] {
+  --primary: #fbb03b;
+  --secondary: #5c629e;
+
+  --black: #fff;
+  --black95: #000000;
+  --black80: #000000;
+  --black60: #000000;
+  --black40: #050505;
+  --black20: #1e1e1e;
+  --black10: #121212;
+
+  --text01: #f0f0f0;
+  --textReverse: #fff;
+
+  --white: #2e3235;
+
+  --error: #e71d32;
+  --success: #5aa700;
+  --warning: #efc100;
+  --information: #5aaafa;
+
+  --nav01: #000;
+  --nav02: #000;
+  --nav03: #323232;
+}
